# bookeo-mcp

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-push.yml
bookeo_mcp/: __init__.py  bookeo_client.py  server.py
bookeo_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
helm/bookeo-mcp/: Chart.yaml  values.yaml
helm/bookeo-mcp/templates/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
