[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookeo-mcp"
version = "1.0.0"
description = "MCP server for Bookeo booking management"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
bookeo-mcp = "bookeo_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bookeo_mcp*"]
